--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="menu.css">
         <link rel="stylesheet" href="scroll.css">
-        <link rel="stylesheet" href="schedule.css">
+        <link rel="stylesheet" href="about.css">
         <link rel="stylesheet" href="history.css">
         <link rel="stylesheet" href="contact.css">
         <link rel="stylesheet" href="main.css">
@@ -20,7 +20,7 @@
                     <ul class="not-sdw">
                         <li><a href = "#1st"><b class="not-sdw opacity">Main</b></a></li>                        
                         <li><a href = "#2nd"><b class="not-sdw opacity">About me</b></a></li>
-                        <li><a href = "#3th"><b class="not-sdw opacity">Dev</b></a></li>
+                        <li><a href = "#3th"><b class="not-sdw opacity">History</b></a></li>
                         <li><a href = "#4th"><b class="not-sdw opacity">Contact</b></a></li>
                     </ul>
                 </nav>
@@ -32,20 +32,35 @@
               <p id="dynamic" class="main"></p>
             </div>
             <div id="2nd" class="scroll-area">
-              <div class="his-font">
-                <img src="">
-                <p class="year">2019</p> 
-                <p class="his-content">       중앙대학교 산업보안학과 입학</p>
-                <p class="his-content">       중앙대학교 산업보안학과 학생회 총무부 부원</p>
-                <p class="his-content">       ISANG(정보보호학술 동아리) 부원</p>
-                <p class="year">2022</p>   
-                <p class="his-content">       산업보안 관리사 취득</p>
-                <p class="his-content">       CPPG(개인정보 관리사) 취득</p>
-                <p class="year">2023</p>   
-                <p class="his-content">       Securious(교육봉사 동아리) 개발트랙 부원</p>
+              <div class="about-me">
+                <div class="profile">
+                <img src="profile.jpg">
+                </div>
+                <div class="intro">
+                  <p>Name: 양희철</p>
+                  <p>Age: 24</p>
+                  <p>MBTI: INTJ</p>
+                  <p></p>
+                </div>
               </div>
             </div>
-            <div id="3th" class="scroll-area"></div>
+            <div id="3th" class="scroll-area">
+              <div class="his-font">
+                <p class="year-r">2019</p> 
+                <p class="his-content-r">       중앙대학교 산업보안학과 입학</p>
+                <p class="his-content-r">       중앙대학교 산업보안학과 학생회 총무부 부원</p>
+                <p class="his-content-r">       ISANG(정보보호학술 동아리) 부원</p>
+                <br><br>
+                <p class="year-r">2023</p>   
+                <p class="his-content-r">       Securious(교육봉사 동아리) 개발트랙 부원</p>
+              </div>
+              <div class="y-bar"></div>
+              <div>
+                <p class="year-l">2022</p>   
+                <p class="his-content-l">       산업보안 관리사 취득</p>
+                <p class="his-content-l">       CPPG(개인정보 관리사) 취득</p>
+              </div>
+            </div>
             <div id="4th" class="scroll-area">
               <div class="img-style"><img class="img-size" src="contact_img/e-mail.png"></div>
               <div class="text-style"><a href="mailto:hc1489@naver.com" class="a-style">E-mail</a></div>
