스크롤 다운 표시 추가

--- a/index.html
+++ b/index.html
@@ -29,12 +29,19 @@
         </div>  
         <div class="scroll-container">
             <div id="1st" class="scroll-area">
-              <p id="dynamic" class="main"></p>
+              <div class="inline">
+              <div class="scr-down">
+                <span class="scr-down-span"></span>
+              </div>
+              <div>
+                <p id="dynamic" class="main"></p>
+              </div>
             </div>
+          </div>
             <div id="2nd" class="scroll-area">
               <div class="about-me">
                 <div class="profile">
-                <img src="profile.jpg">
+                <img class="shdw" src="profile.jpg">
                 </div>
                 <div class="intro">
                   <p>Name: 양희철</p>
